k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: btc-postgres
spec:
  selector:
    app: btc-postgres
  ports:
    - port: 5432
      targetPort: 5432
